# todo-tui

./: Cargo.toml  README.md  settings.json
.github/: release.yml
.github/workflows/: release.yml
src/: app.rs  auth.rs  cli.rs  config.rs  confirm.rs  handle_json.rs  helpers.rs  input.rs  main.rs  new_task.rs  settings.rs  tasks.rs  theme.rs
src/ui/: app.rs  confirm.rs  mod.rs  new_task.rs  overdue.rs
